--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
           </div>
 
           <div class="col-md-6 d-flex">
-          	<div class="img" style="background-image: url(images/DSC_7634.JPG);"></div>
+          	<div class="img" style="background-image: url(images/DSC_7634.jpg);"></div>
           </div>
         </div>
       </div>
